--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     "react-dom": "https://esm.sh/react-dom@18.2.0",
     "@google/genai": "https://esm.sh/@google/genai",
     "react-router-dom": "https://esm.sh/react-router-dom",
-    "lucide-react": "https://esm.sh/lucide-react"
+    "lucide-react": "https://esm.sh/lucide-react",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
